# vulkan-shader-profiler

./: .clang-format  Android.bp.example  CMakeLists.txt  README.md
.github/workflows/: presubmit.yml
chromeos-utils/: vulkan-shader-profiler.sh
common/: buffers_file.hpp  common.hpp  spirv-extract.hpp
extractor/: CMakeLists.txt  extractor.cpp  spirv.cpp  spirv.hpp  utils.hpp
layer/: CMakeLists.txt  functions.def  layer.cpp
manifest/: vulkan-shader-profiler.json
merge-buffers/: CMakeLists.txt  merge-buffers.cpp
runner/: CMakeLists.txt  runner.cpp  spirv.hpp
src/: functions.def  vulkan-shader-profiler.cpp
tests/: checksum.buffers  checksum.expected_output  checksum.spvasm  example-counter.spvasm  example-expectation.spvasm  example-vksp_s0-expectation.spvasm  example.spvasm  perfetto.sh  perfetto_config  test-buffers.sh  test-extractor.sh  test-runner.sh
